--- a/migrate.cfg.example
+++ b/migrate.cfg.example
@@ -14,12 +14,6 @@ usernames = {
     'trac2': 'git2'
     }
 
-# Used to set the colors for labels as they are created in the GitLab database.
-label_colors = {
-        'some_label': '#8080FF',
-        'invalid': '#FF0000'
-    }
-
 # Example value, adjust to your LDAP setup
 ldap_uid_pattern = 'uid=%s,ou=people,dc=your,dc=company,dc=tld'
 
@@ -91,7 +85,18 @@ target-directory: /tmp/test.wiki/
 [issues]
 
 # Should we migrate the issues (default = yes)
-# migrate: yes
+# migrate: no
+
+# Used to set the colors for labels as they are created in the GitLab database.
+label_colors = {
+        'some_label': '#8080FF',
+        'invalid': '#FF0000'
+    }
+
+# Can be used to map [foo] or foo: as prefix in issue titles to issue labels.
+label_prefix_translation_map = {
+        'foo': 'common'
+    }
 
 # If defined, import only these issues
 #only_issues: [ 509, 561, 564, 626, 631, 792, 830]
