Add support for creating forks for certain people
Note: will not check if the fork already exists or not, so if re-running you will have to wipe users & forks first.

--- a/users.py.example
+++ b/users.py.example
@@ -36,3 +36,8 @@ users = [
         'blocked': True
     },
 ]
+
+# Add to this list all users who should receive an automatic fork of the main project.
+fork_users = [
+    'johndoe'
+]
