Support multiple default_groups for users
This can be handy sometimes, for example if you have two or more groups where you want to add all your users (e.g. one for internal and one for external projects)

--- a/users.py.example
+++ b/users.py.example
@@ -37,6 +37,11 @@ users = [
     },
 ]
 
+# The groups mentioned here should exist in your GitLab configuration
+default_groups = [
+    'acmeinc'
+]
+
 # Add to this list all users who should receive an automatic fork of the main project.
 fork_users = [
     'johndoe'
