Bug fix: removing labels should only remove our project's labels
This is a followup to 518ddcd which was apparently a bit incomplete.

--- a/projects.py.example
+++ b/projects.py.example
@@ -26,7 +26,7 @@ projects = {
 
         # Set the following two properties if you want one or more projects
         # to be created in some other group than the default one.
-        'group_name': 'external'
+        'group_name': 'external',
         'namespace_id': 12345
     }
 }
